# flying-dragon-object

./: .gitignore  CMakeLists.txt  README.md  build.sh  korean-translation-plan.md  patch_korean.bat
cheats/: wbmljod.xml  wbmlvcd.xml
devlog/: 001_phase_a_initial.md  002_sound_implementation.md  003_sound_bugfix.md  004_input_and_ui.md  005_cross_platform.md  006_korean_ingame.md
korean-patch/: kr_strings.txt  wbmljb_ips.7z
roms/: readme.txt
src/win-ref/: Makefile  cfg.c  cfg.h  font_kr.h  krtext.c  krtext.h  machine.c  machine.h  main.c  menu.c  menu.h
tools/: kr_overrides.txt  kralign.py  krdump.py  krencode.py  mc8123.py  mkbootleg.py  mkfont.py
